# taxonomyml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/demo/: Top_n_queries_page.ipynb  demo_notebook.ipynb
src/lib/: ctfidf.py  utils.py
src/taxonomyml/: __init__.py  exceptions.py  main.py  settings.py
src/taxonomyml/lib/: api.py  clustering.py  ctfidf.py  gauth.py  gsc.py  gscutils.py  nlp.py  prompts.py  searchconsole.py  utils.py
src/tests/: main.py
